# parameter-golf

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  pyproject.toml  requirements.txt  tmp_sp2048_tokenizer_specs.json  train_gpt.py  train_gpt_mlx.py
data/: README.md  cached_challenge_fineweb.py  download_hf_docs_and_tokenize.py  tokenizer_specs.json
docker/: start.sh
docs/: BASELINE.md
docs/research/: 2026-03-18_4xh100_baseline_proxy.md  2026-03-18_attention_residuals_draft_notes.md  2026-03-18_recurrent44_deeper223_real_train_proxy_draft_notes.md  2026-03-18_recurrent44_deeper223_w576_real_train_proxy_draft_notes.md  2026-03-18_recurrent_depth_draft_notes.md  2026-03-18_recurrent_depth_eval4_only_draft_notes.md  2026-03-18_recurrent_depth_param_eval_sweep_draft_notes.md  (+11 more)
experiments/: 00_baseline_reproduction_8xh100.md  README.md  attention_residuals.md  bitnet_ternary_qat.md  compression_aware_dense_transformer.md  data_selection.md  distillation.md  early_layer_recurrence_width.md  eval_time_adaptation_cache.md  frontier_decomposition_pr89.md  hybrid_attention_recurrent_layers.md  larger_tokenizer_factorized_embeddings.md  looped_llms.md  low_rank_ffn_factorization.md  masa_weight_sharing.md  multi_token_prediction.md  recurrent_depth.md  sp2048_dense_frontier_candidate.md
research/: __init__.py  bitnet.py
tests/: __init__.py  test_attention_residuals.py  test_bitnet.py  test_cached_challenge_fineweb.py  test_dense_screening.py  test_frontier_decomposition.py  test_recurrent_depth.py  test_tokenizer_eval_mainline.py
(+4 files in other folders)
